--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,63 +1,136 @@
+
+:root {
+  --dark-background: #050107;       
+  --dark-gray: #212121;            
+  --purple-accent: rgb(97, 32, 158); 
+  --semi-transparent-black: rgba(0, 0, 0, 0.8); 
+  --semi-white: #fff;
+}
+
 * {
-    font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+  font-family: 'Onest Variable', 'RubikVariable';
+  background-color: var(--dark-background);
+  box-sizing: border-box;
+  color: var(--semi-white);
+}
+
+body {
+  padding: 30px;
+  text-align: center;;
+}
+
+input {
+  background-color: #212121;
+  border-radius: 5px;
+  border: 1px solid var(--purple-accent);
+  font-size: 1.2rem;
+  outline: none;
+  padding: 10px 15px;
+  width: 60%;
+}
+
+h1 {
+  color: var(--purple-accent);
+  font-weight:900;
+  font-size: 3rem;
+
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 3rem;
+  margin-bottom: 5px;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px
+}
+
+.card {
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out, box-shadow 0.4s ease-in-out;
+  box-shadow: 0 0px 40px  var(--semi-white);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--semi-transparent-black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  position: relative;
+  max-width: 90%;
+  max-height: 90%;
+  overflow: hidden;
+  border-radius: 10px;
+  text-align: center;
+  opacity: 0; 
+  transform: scale(0.8); 
+  animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: scale(1);
   }
-  
-  body {
-    padding: 60px;
-  }
-  
+}
+
+.modal-content img {
+  width: 100%;
+  height: auto;
+  max-height: 80vh;
+  object-fit: contain;
+}
+
+.modal-content p {
+  margin: 10px 0;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+@media (max-width: 768px) { 
   input {
-    background-color: white;
-    border-radius: 5px;
-    border: 1px solid rgb(97, 32, 158);
-    color: black;
-    font-size: 1.2rem;
-    outline: none;
-    padding: 10px 15px;
-    width: 100%;
+      width: 90%;
   }
-  
-  h2 {
-    font-size: 1.5rem;
+  h1 {
+    font-size: 2.8rem;
   }
-  
-  h3 {
-    font-size: 3rem;
-    margin-bottom: 5px;
+
+  .esperando svg{
+    margin-top: 50px;
   }
-  
-  .card-grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+
+  .esperando p{
+    margin-top: 50px;
   }
-  
-  .card {
-    align-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-    display: flex;
-    flex-direction: column;
-    height: 0%;  
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  
-  .card p {
-    background-color: white;
-    flex: 1;
-    font-size: 1.5rem;
-    margin-top: 5px;
-    padding: 5px 20px 0px 20px;
-    text-align: center;
-  }
-  
-  .card img {
-    width: 100%;
-  }
+}
